samples/_failures_safe/1761418820_31e658_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2d7eab1e.c: In function ‘main’:
./samples/SAFE/__tmp_2d7eab1e.c:171:9: error: expected declaration or statement at end of input
  171 |         case 2:
      |         ^~~~
./samples/SAFE/__tmp_2d7eab1e.c:171:9: error: expected declaration or statement at end of input
